tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecified/node/jsFileCompilationDifferentNamesNotSpecified.errors.txt
DifferentNamesNotSpecified/tsconfig.json(2,24): error TS5102: Option 'out' has been removed. Please remove it from your configuration.
  Use 'outFile' instead.
DifferentNamesNotSpecified/tsconfig.json(2,24): error TS6082: Only 'amd' and 'system' modules are supported alongside --out.


==== DifferentNamesNotSpecified/tsconfig.json (2 errors) ====
    {
      "compilerOptions": { "out": "test.js" }
                           ~~~~~
!!! error TS5102: Option 'out' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'outFile' instead.
                           ~~~~~
!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --out.
    }
==== DifferentNamesNotSpecified/a.ts (0 errors) ====
    var test = 10;